--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Scanner</title>
+    <style>
+        #reader {
+            width: 300px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Сканування QR-коду</h1>
@@ -13,7 +19,7 @@
         <option value="3">Локація 3</option>
         <option value="4">Локація 4</option>
     </select>
-    <div id="reader" style="width: 300px;"></div>
+    <div id="reader"></div>
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <script>
         function onScanSuccess(decodedText) {
