--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         #reader {
             width: 300px;
             margin-top: 20px;
+            display: none; /* Спочатку приховано */
         }
     </style>
 </head>
@@ -19,9 +20,17 @@
         <option value="3">Локація 3</option>
         <option value="4">Локація 4</option>
     </select>
+    <button id="scanButton">Сканувати</button>
     <div id="reader"></div>
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <script>
+        document.getElementById('scanButton').addEventListener('click', function() {
+            document.getElementById('reader').style.display = 'block'; // Показати елемент
+            const html5QrcodeScanner = new Html5QrcodeScanner(
+                "reader", { fps: 10, qrbox: 250 });
+            html5QrcodeScanner.render(onScanSuccess);
+        });
+
         function onScanSuccess(decodedText) {
             const location = document.getElementById('location').value;
             fetch('https://hook.eu2.make.com/criogtxzq3mhy2o89gymvgd1dqg5jshk', {
@@ -35,10 +44,6 @@
             .then(data => console.log('Success:', data))
             .catch((error) => console.error('Error:', error));
         }
-
-        const html5QrcodeScanner = new Html5QrcodeScanner(
-            "reader", { fps: 10, qrbox: 250 });
-        html5QrcodeScanner.render(onScanSuccess);
     </script>
 </body>
 </html>
