--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </select>
     <button id="scanButton">Сканувати</button>
     <div id="reader"></div>
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <script>
         function onScanSuccess(decodedText) {
             const location = document.getElementById('location').value;
