--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Scanner</title>
+    <!-- Підключення манифесту -->
+    <link rel="manifest" href="/manifest.json">
+    <!-- Мета-теги для iOS -->
+    <meta name="apple-mobile-web-app-title" content="QR Scanner">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
     <style>
         body {
             font-family: Arial, sans-serif;
