--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
 </head>
 <body>
     <div class="container">
-        <div id="result">Результат сканування з'явиться тут</div>
+        <div id="result">Очікую код</div>
         <select id="location">
             <option value="1">Локація 1</option>
             <option value="2">Локація 2</option>
             <option value="3">Локація 3</option>
             <option value="4">Локація 4</option>
+            <option value="5">Адмін</option>
         </select>
         <div id="toggle-container">
             <span class="toggle-label">Тогл</span>
